# baiter

./: .env.example  .gitignore  Cargo.toml  wstest-1776879908434.txt
.github/: dependabot.yml
deploy/: nginx-site.conf
docs/: aras.md  bonereaper-backtest-report.md  bonereaper-rehber.md  bonereaper-strategy-kurallari.md  bonereaper-strategy.md  bonereaper.md  bot-platform-mimari.md  btc5m-loss-analysis.md  elis.md  gabagool.md  gravie-backtest-report.md  gravie.md  harvest-v2-findings.md  harvest-v2.md  proje-iskeleti.md  rust-polymarket-kutuphaneler.md  signal-lightplan.md  signal-report.md  signal.md  staging-runbook.md  strategies.md
examples/: rtds_probe.rs  rtds_raw_probe.rs
exports/: aras-verification.md  backtest-1777471200.md  backtest-1777471800.md  backtest-1777472100.md  backtest-1777473000.md  backtest-final-16-markets.md  backtest-final-24-markets.md  blackbox-analysis-20260429.md  blackbox-per-market-20260429.md  blackbox-thresholds-20260429.md  blackbox-trades-20260429.csv  bot16-live-vs-v4b.md  features-24-markets.json  polymarket-btc-updown-5m-1777471200.json  polymarket-btc-updown-5m-1777471800.json  polymarket-log-btc-updown-5m-1777467300.json  polymarket-log-btc-updown-5m-1777467900.json  polymarket-log-btc-updown-5m-1777468200.json  polymarket-log-btc-updown-5m-1777468500.json  polymarket-log-eebde7a0e019a63e6b476eb4-btc-updown-5m-1777467000-20260429T133026Z.json  polymarket-log-eebde7a0e019a63e6b476eb4-btc-updown-5m-1777467600-20260429T133127Z.json
frontend/: components.json  index.html  next.config.mjs  package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.js  tsconfig.node.tsbuildinfo  tsconfig.tsbuildinfo  vite.config.js  vite.config.ts
migrations/: 0001_init.sql  0002_snapshots.sql  0002_v2_builder_code.sql  0003_price_bounds.sql  0004_cooldown_threshold.sql  0005_pnl_pair_count.sql  0006_market_ticks.sql  0007_bot_start_offset.sql  0008_pnl_avg_yes_no.sql  0009_pnl_session_ts_index.sql  0010_rtds_window_open.sql  0011_drop_signal_weight.sql  0012_global_credentials.sql  0013_global_credentials_not_null.sql
scripts/: _one_off_bot66_canvas.py  _one_off_bot66_micro.py  _one_off_bot66_realized.py  _one_off_bot66_summarize.py  _one_off_bot66_trade_pnl.py  _one_off_gravie_sim.py  academic_optimal_sim.py  analyze_blackbox.py  analyze_correlations.py  analyze_per_market.py  arb_dca_sim.py  arb_dca_v2.py  arb_dca_v3.py  arb_sim.py  backtest_market.py  backtest_param.py  batch_backtest.py  before_after_sim.py  binance_latency_deep_analysis.py  bonereaper_full_sim_backtest.py  bonereaper_sim.py  bot100_grid_backtest.py  bot100_signed_backtest.py  (+53 more)
src/: api.rs  (+17 more)
(+213 files in other folders)
